--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,8 +1,8 @@
-FROM node:16.14-alpine
-WORKDIR /app-backend
-COPY package*.json ./
-RUN npm install
-COPY . .
-EXPOSE 3000
-ENTRYPOINT ["npm", "run"]
-CMD [ "dev" ]
+# FROM node:16.14-alpine
+# WORKDIR /app-backend
+# COPY package*.json ./
+# RUN npm install
+# COPY . .
+# EXPOSE 3000
+# ENTRYPOINT ["npm", "run"]
+# CMD [ "dev" ]
