--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,8 +1,8 @@
-FROM node:16.14-alpine
-WORKDIR /app-frontend
-COPY package*.json ./
-RUN npm install
-COPY . .
-EXPOSE 5173
-ENTRYPOINT ["npm", "run"]
-CMD [ "dev" ]
+# FROM node:16.14-alpine
+# WORKDIR /app-frontend
+# COPY package*.json ./
+# RUN npm install
+# COPY . .
+# EXPOSE 5173
+# ENTRYPOINT ["npm", "run"]
+# CMD [ "dev" ]
